# threatforge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: atomic_routes.py  dashboard_routes.py  generator_routes.py  intel_routes.py  recon_routes.py  routes.py
apps/api/app/core/: settings.py
apps/api/app/db/: session.py
apps/api/app/models/: atomic.py  dashboard.py  generation.py  intel.py  recon.py  rule.py
apps/api/app/schemas/: dashboard.py  generator.py  rule.py
apps/api/app/services/: catalog_service.py  config_service.py  conversion_service.py  import_service.py  mitre_service.py  repository_service.py  rule_service.py  use_case_service.py
apps/api/app/services/atomic/: __init__.py  service.py
apps/api/app/services/dashboard/: __init__.py  builder.py  layouts.py  service.py
apps/api/app/services/generator/: __init__.py  bulk.py  cache.py  engine.py  explain.py  optimize.py  profiles.py  roundtrip.py  targets.py  warnings.py
apps/api/app/services/intel/: __init__.py  ingest.py  scheduler.py  scoring.py  seed.py  service.py  stix.py
apps/api/app/services/recon/: __init__.py  analyzers.py  browser.py  engine.py  passive.py  scoring.py  (+1 more)
apps/api/tests/: test_atomic.py  test_dashboard.py  test_generator_g1.py  test_generator_g10.py  test_generator_g11_golden.py  test_generator_g3.py  test_generator_g4.py  test_generator_g5.py  test_generator_g6.py  test_generator_g7.py  test_generator_g8.py  test_generator_g9.py  test_intel.py  test_recon.py  test_rule_engine.py
(+141 files in other folders)
